deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
        - name: streamlit
          image: quay.io/jdiazsua/streamlit-redhat:latest
          ports:
            - containerPort: 8501
          volumeMounts:
            - name: streamlit-secrets
              mountPath: /opt/app-root/src/.streamlit/secrets.toml
              subPath: secrets.toml
          command: ["streamlit"]
          args:
            - run
            - streamlit_redhat/app.py
            - "--server.port=8501"
            - "--server.address=0.0.0.0"
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: streamlit-secrets
          secret:
            secretName: streamlit-secrets
