deploy/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: streamlit-route
spec:
  to:
    kind: Service
    name: streamlit-service
  port:
    targetPort: 8501
